--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,49 @@ body {
     font-size: 2rem;
     color: #333;
   }
+
+
+  #practice-buttons {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0px;
+  }
+  
+  #practice-buttons button {
+    padding: 10px 20px;
+    margin: 0px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    border: 1px solid #7b0089;
+    background-color: #7b0089;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  #practice-buttons button:hover {
+    background-color: #60006b;
+  }
+
+  #practice-options {
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+  }
+  
+  #practice-options button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    border: 1px solid #7b0089;
+    background-color: #7b0089;
+    color: white;
+    border-radius: 5px;
+  }
+  #practice-options button:hover {
+    background-color: #60006b;
+  }
+  
+  #practice-options .selected {
+    background-color: #44014b;
+    border-color: #44014b;
+  }
